templates/sas-bases/overlays/network/networking.k8s.io/v1/ingress/components/sas-web-assets/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /fonts/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /fonts/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-fonts
    sas.com/admin: namespace
  name: sas-fonts
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-fonts
            port:
              number: 80
        path: /fonts(/|$)(.*)
        pathType: Prefix
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-fonts
            port:
              number: 80
        path: /fonts(/|$)(.*)
        pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /themeContent/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /themeContent/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-theme-content
    sas.com/admin: namespace
  name: sas-theme-content
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-theme-content
            port:
              number: 80
        path: /themeContent(/|$)(.*)
        pathType: Prefix
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-theme-content
            port:
              number: 80
        path: /themeContent(/|$)(.*)
        pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /themes/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /themes/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-themes
    sas.com/admin: namespace
  name: sas-themes
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-themes
            port:
              number: 80
        path: /themes(/|$)(.*)
        pathType: Prefix
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-themes
            port:
              number: 80
        path: /themes(/|$)(.*)
        pathType: Prefix
